Fix: prevent links from twinkling in dark mode

--- a/src/global.css
+++ b/src/global.css
@@ -171,7 +171,7 @@
   main a:not(.unstyled-link),
   .fake-link {
     @apply cursor-pointer;
-    @apply transition-colors;
+    @apply transition-colors dark:transition-none dark:hover:transition-colors;
     @apply duration-75 focus:duration-0 active:duration-0;
     @apply underline;
     @apply underline-offset-2;
